[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:fsh_validator/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[options.entry_points]
console_scripts = 
	fsh-validator = fsh_validator.__main__:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = BLK100,E231,W503
